zeit.content.cp changes
=======================

0.13.1 (unreleased)
-----------------

- ``cp_extra`` Block: dpa-News

0.13 (2009-08-14)
-----------------

- Drop von Inhaltsobjekten in einen Teasermosaik-Platzhalter funktioniert
  wieder (#5972).

- Maximale Anzahl anzuzeigender Einträge im RSS-Block einstellbar (#5964).

- <category> wird in Feeds übernommen (#5967).

- Titel bei cpextras kann überschrieben werden (#5997).

- Quiz-Block enthält jetzt ein xi:include (#5974).

0.12 (2009-08-11)
-----------------

- JSON-Post statt GET mit langer URL (#5868).

- Layout für Printarchivseiten hinzugefügt.

- »Common«-Tab bei Blöcken erreichbar, die sonst keine Bearbeitungsmöglichkeit
  haben (#5955).

- ``cp_extra`` Blöcke: Neu im Ressort, Live-Search, Print Archiv, Relateds,
  Blindblock, Debug

- xi:includes werden jetzt mit dem richtigen Pfad ausgegeben (#5954).

0.11 (2009-08-03)
-----------------

- Weitere Layouts für den Teaserblock: Doppelspalter, Datumsteaser, Kleine
  Teaser (#5829).

0.10.1 (2009-07-28)
-------------------

- CP-Source zum Filtern per Suche angepasst (#4499).

0.10 (2009-07-20)
-----------------

- RSS-Block zeigt Fehler sinnvoller an (#5678).

- Speichern funktioniert zuverlässiger (#5707, #5669).

- Bessere Anzeige von Fehlern im RSS-Block (#5678).

- Modulnamen in der Modulbibliothek werden jetzt übersetzt (u.A. #5677).

- Vollgraphischer Block ist direkt nach dem Anlegen nicht mehr leer.

- LightboxForms aktivieren jetzt den Lightbox-Context.

0.9.1 (2009-06-24)
------------------

- »leader-upright«-Layout repariert (#5570).

- Die CenterPage enthält einen neuen Abschnitt ``<feed>``, in dem
  ``<reference>``s zu den n letzten Teasern aus dem Aufmacherbereich stehen;
  jeweils der erste Teaser eines Teaserblocks wird dort eingefügt (#4884).

  Die Einträge sind umgekehrt chronologisch geordnet, d. h. um den eigentlichen
  RSS-Feed zu erzeugen, kann das XSLT die ersten x Einträge nehmen.