@@ -56,8 +56,11 @@ TEASER_BLOCK = [
     BlockLayout('leader-upright',
                 u'Großer Teaser mit Hochkant-Bild und Teaserliste',
                 '450x200', areas=('lead-1',)),
-    BlockLayout('archive-print',
-                u'Teaser im Printarchiv',
+    BlockLayout('archive-print-volume',
+                u'Ausgabenteaser im Printarchiv',
+                areas=('lead',)),
+    BlockLayout('archive-print-year',
+                u'Jahresteaser im Printarchiv',
                 areas=('lead',)),
     BlockLayout('buttons',
                 u'Kleiner Teaser mit kleinem Bild und Teaserliste',
